--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -46,7 +46,7 @@
       </ion-row>
     </ion-card-subtitle>
     <app-progress-bar [showText]="false" [percentValidation]="folder.percentValidation()"
-      [percentFill]="folder.percentFill()"></app-progress-bar>
+    [percentFill]="folder.percentFill()"></app-progress-bar>
 
   </ion-card-header>
 
@@ -54,7 +54,8 @@
 
     <app-progress-bar [showBar]="false" [percentValidation]="folder.percentValidation()"
       [percentFill]="folder.percentFill()"></app-progress-bar>
-
+    
   </ion-card-content>
-
+  <ion-card-content></ion-card-content>
+  
 </ion-card>
