--- a/src/app/components/trads-group/trads-group.component.scss
+++ b/src/app/components/trads-group/trads-group.component.scss
@@ -3,3 +3,10 @@
     box-shadow: none;
     background-color: rgba(0, 0, 0, 0);
 }
+
+ion-item {
+    --background: rgba(0, 0, 0, 0);
+    box-shadow: none;
+    background-color: rgba(0, 0, 0, 0);
+    --border-color: rgba(0, 0, 0, 0);
+}
