added icons on hover, fix menu color

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,3 +49,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(40em, 1fr));
 }
+
+ion-menu ion-content{
+  --background: var(--ion-color-step-0);
+}
