add pop menu for item and folder

--- a/src/app/components/progress-bar/progress-bar.component.scss
+++ b/src/app/components/progress-bar/progress-bar.component.scss
@@ -1,5 +1,6 @@
 ion-progress-bar {
     grid-area: 1 / 1 / 2 / 2;
+    --background: var(--ion-background-color);
     --progress-background: var(--ion-color-primary);
 }
 
