--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,3 +53,10 @@
 ion-menu ion-content{
   --background: var(--ion-color-step-0);
 }
+
+ion-item {
+  --background: rgba(0, 0, 0, 0);
+  box-shadow: none;
+  background-color: rgba(0, 0, 0, 0);
+  --border-color: rgba(0, 0, 0, 0);
+}
