--- a/src/app/components/trads-group/trads-group.component.html
+++ b/src/app/components/trads-group/trads-group.component.html
@@ -6,16 +6,16 @@
           <ion-item [class]="canExpand?'':'opened-file'">
             <ion-icon slot="start" name="document"
               [color]="tradGroup.isValidated()?'success':tradGroup.isFilled()?'primary':''"></ion-icon>
-            <ion-icon slot="start" name="checkmark-circle-outline" color="primary"
+            <!-- <ion-icon slot="start" name="checkmark-circle-outline" color="primary"
               *ngIf="!tradGroup.isValidated() && tradGroup.isFilled()"></ion-icon>
-            <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="tradGroup.isValidated()"></ion-icon>
+            <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="tradGroup.isValidated()"></ion-icon> -->
             <ion-textarea slot="start" [value]="tradGroup.getName()" (ionChange)="onNameUpdate($event.target.value)"
               [color]="tradGroup.isValidated()?'success':tradGroup.isFilled()?'primary':''"></ion-textarea>
 
 
           </ion-item>
         </ion-col>
-        <ion-col>
+        <ion-col size="sizeXs">
           <ion-item [class]="canExpand?'':'opened-file'">
             <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
               <ion-icon name="chevron-down-outline"></ion-icon> Show
@@ -24,8 +24,8 @@
               *ngIf="!canExpand">
               <ion-icon name="chevron-up-outline"></ion-icon>
             </ion-button>
-            <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" color="danger">
-              <ion-icon name="trash"></ion-icon>
+            <ion-button slot="end" expand="block" fill="clear" shape="round" (click)="presentPopover($event,tradGroup)">
+              <ion-icon name="ellipsis-vertical"></ion-icon>
             </ion-button>
           </ion-item>
         </ion-col>
