--- a/src/app/components/tree-view/folder-tree/folder-tree.component.html
+++ b/src/app/components/tree-view/folder-tree/folder-tree.component.html
@@ -9,19 +9,19 @@
   </ion-col>
   <ion-col style="min-width: 0px;">
     <ion-item button (click)="click()" [class]="getBgColor()?'selected':''">
-      <ion-icon slot="start" [name]="folder.isValidated()?'checkmark-circle':'checkmark-circle-outline'" [color]="getColor()"
-        *ngIf="folder.isFilled() && !folder.isValidated() && hovered"></ion-icon>
-      <ion-icon slot="start" [name]="folderIcon()" [color]="getColor()"  *ngIf="!folder.isFilled() || !hovered"></ion-icon>
+      
+      <ion-icon slot="start" [name]="folderIcon()" [color]="getColor()"></ion-icon>
       <ion-label [color]="getColor()">
         {{folder.getName()}}
       </ion-label>
-      
+      <!-- <ion-icon slot="end" [name]="folder.isValidated()?'checkmark-circle':'checkmark-circle-outline'" [color]="getColor()"
+        *ngIf="folder.isFilled() && !folder.isValidated() && !hovered"></ion-icon> -->
     </ion-item>
     
     
   </ion-col>
   <ion-col size="sizeXs" *ngIf="hovered">
-    <ion-item button>
+    <ion-item button (click)="presentPopover($event,folder)" >
     
       <ion-icon name="ellipsis-vertical"  ></ion-icon>
       
