--- a/src/app/components/tree-view/menu-popover/template-popover.component.html
+++ b/src/app/components/tree-view/menu-popover/template-popover.component.html
@@ -10,7 +10,7 @@
     <ion-label>New Folder</ion-label>
   </ion-item>
 
-  <ion-item button  (click)="presentDeleteConfirm()">
+  <ion-item button  (click)="presentDeleteConfirm()" *ngIf="!item.isRoot()">
     <ion-icon slot="end" color="danger" name="trash"></ion-icon>
     <ion-label color="danger">Delete</ion-label>
   </ion-item>
