update copyright date

--- a/src/app/components/top-menu/about-modal/about-modal.component.html
+++ b/src/app/components/top-menu/about-modal/about-modal.component.html
@@ -57,7 +57,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-item slot='start' button (click)="copyright()">
-      <ion-label>Copyright (C) 2020-2020</ion-label>
+      <ion-label>Copyright (C) 2020-{{year}}</ion-label>
     </ion-item>
     <ion-buttons slot="secondary">
       <ion-button (click)="dismissModal()" color="medium">
