--- a/src/app/components/top-menu/languages-modal/languages-modal.component.scss
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.scss
@@ -1,12 +1,8 @@
-ion-col {
-    padding: 10px 5px 0px 0px;
-    background-color: var(--ion-color-step-50);
-  }
-
-  ion-button{
-      padding:0px;
-  }
-  ion-row {
-    flex-wrap: nowrap;
-  }
-  
+ion-button {
+  padding: 0px;
+}
+ion-row {
+  background-color: var(--ion-color-step-50);
+  align-items: center;
+  flex-wrap: nowrap;
+}
