--- a/src/app/components/tree-view/menu-popover/template-popover.component.html
+++ b/src/app/components/tree-view/menu-popover/template-popover.component.html
@@ -1,16 +1,16 @@
 <ion-list>
 
-  <ion-item button (click)="newItem()" *ngIf="isFolder()">
+  <ion-item button lines="none" (click)="newItem()" *ngIf="isFolder()">
     <ion-icon slot="end" name="document"></ion-icon>
     <ion-label>New Item</ion-label>
   </ion-item>
 
-  <ion-item button lines="none" (click)="newFolder()" *ngIf="isFolder()">
+  <ion-item button (click)="newFolder()" *ngIf="isFolder()">
     <ion-icon slot="end" name="folder"></ion-icon>
     <ion-label>New Folder</ion-label>
   </ion-item>
 
-  <ion-item button  (click)="presentDeleteConfirm()" *ngIf="!item.isRoot()">
+  <ion-item button lines="none" (click)="presentDeleteConfirm()" *ngIf="!item.isRoot()">
     <ion-icon slot="end" color="danger" name="trash"></ion-icon>
     <ion-label color="danger">Delete</ion-label>
   </ion-item>
