--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,9 +54,12 @@ ion-menu ion-content{
   --background: var(--ion-color-step-0);
 }
 
+ion-list{
+  background: rgba(0, 0, 0, 0);
+}
+
 ion-item {
   --background: rgba(0, 0, 0, 0);
   box-shadow: none;
   background-color: rgba(0, 0, 0, 0);
-  --border-color: rgba(0, 0, 0, 0);
 }
